fixed navbar spacing

--- a/themes/helfertool/static/css/style.css
+++ b/themes/helfertool/static/css/style.css
@@ -23,6 +23,7 @@ html {
 .navbar-custom li {
     padding-left: 1em;
     padding-right: 1em;
+    height: 1em;
 }
 
 @media (min-width: 768px) {
